--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,36 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.32"
+
+    ext{
+        kotlin_version = "1.4.32"
+        hiltVersion = "2.31-alpha"
+        hiltAndroidXVersion = '1.0.0-alpha03'
+    }
+
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
+        /** Gradle Plugin */
         classpath "com.android.tools.build:gradle:4.1.3"
+        
+        /** Kotlin Plugin */
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        /** Firebase Plugin */
+        classpath "com.google.gms:google-services:4.3.5"
+
+        /** Dependency Injection Plugin */
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
+
 
 allprojects {
     repositories {
