--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0-alpha3'
     implementation 'androidx.cardview:cardview:1.0.0-alpha3'
 
+    implementation "androidx.recyclerview:recyclerview:1.2.0"
+
 
     /** Kotlin Coroutines */
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
