Criação de entidades Domain

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
 
     ext{
         kotlin_version = "1.4.32"
-        hiltVersion = "2.31-alpha"
+        hiltVersion = "2.33-beta"
         hiltAndroidXVersion = '1.0.0-alpha03'
     }
 
