--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,16 +55,19 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.wear:wear:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.4'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.4'
+    implementation 'androidx.wear:wear:1.1.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.google.android.material:material:1.0.0-alpha3'
-    implementation 'androidx.cardview:cardview:1.0.0-alpha3'
+    implementation 'com.google.android.material:material:1.4.0-alpha02'
+    implementation 'androidx.cardview:cardview:1.0.0'
 
     implementation "androidx.recyclerview:recyclerview:1.2.0"
+
+    /*imagem circular*/
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
 
 
     /** Kotlin Coroutines */
@@ -76,7 +79,7 @@ dependencies {
 
     /** Hilt - Dependency Injection */
     implementation "com.google.dagger:hilt-android:$hiltVersion"
-    compileOnly 'com.google.android.wearable:wearable:2.6.0'
+    compileOnly 'com.google.android.wearable:wearable:2.8.1'
     kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hiltAndroidXVersion"
     kapt "androidx.hilt:hilt-compiler:$hiltAndroidXVersion"
@@ -94,4 +97,5 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 }
