Criada a tela de informações pós cadastro

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     /*imagem circular*/
     implementation 'de.hdodenhof:circleimageview:2.1.0'
 
-    //implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
 
     /** Kotlin Coroutines */
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
