Adicionado features no mapa e ajustes na tela de Descrição de Torneio

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,8 @@ dependencies {
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hiltAndroidXVersion"
     kapt "androidx.hilt:hilt-compiler:$hiltAndroidXVersion"
 
+    implementation 'com.tbuonomo:dotsindicator:4.2'
+
     implementation "android.arch.persistence.room:runtime:1.1.1"
     kapt "android.arch.persistence.room:compiler:1.1.1"
 
